Updated the Postman json file to include RSQL queries